<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jake.LeagueStats.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/main_menu_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/main_menu_summoner_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_menu_single_summoner"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_menu_title"
        android:background="#111"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/main_menu_summoner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/main_menu_selected_region"
                android:layout_toStartOf="@+id/main_menu_selected_region"
                android:padding="5dp"
                android:paddingRight="15dp"
                android:text="@string/main_menu_summoner_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/main_menu_selected_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:paddingRight="15dp"
            android:text="@string/main_menu_selected_region"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/main_menu_summoner_profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_menu_summoner_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="5dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/main_menu_single_summoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="getSingleSumStats"
        android:text="@string/main_menu_single_summoner" />

    <Button
        android:id="@+id/main_menu_single_summoner_champion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_single_summoner"
        android:layout_centerHorizontal="true"
        android:onClick="getBaseChampStats"
        android:text="@string/main_menu_single_summoner_champion" />

    <Button
        android:id="@+id/main_menu_all_rotation_champions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_single_summoner_champion"
        android:layout_centerHorizontal="true"
        android:onClick="getAllChampsOnRotation"
        android:text="@string/main_menu_all_rotation_champions" />

    <Button
        android:id="@+id/main_menu_single_summoner_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_all_rotation_champions"
        android:layout_centerHorizontal="true"
        android:onClick="getSingleSumStatsInGame"
        android:text="@string/main_menu_single_summoner_game" />

    <Button
        android:id="@+id/main_menu_build_a_champ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_menu_single_summoner_game"
        android:layout_centerHorizontal="true"
        android:onClick="getChampionItemBuilder"
        android:text="@string/main_menu_build_a_champ" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
