<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context="com.example.jake.LeagueStats.SingleSummonerActivity">

    <TableLayout
        android:id="@+id/topSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:stretchColumns="1">
        <TableRow>
        <RelativeLayout
            android:id="@+id/topSection_Sum_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/single_summoner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:minWidth="100dp"
            android:paddingRight="15dp"
            android:text="@string/single_summoner_summoner_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/single_summoner_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/single_summoner_losses_value"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/single_summoner_losses_value"
            android:layout_below="@+id/single_summoner_title"
            android:layout_toStartOf="@+id/single_summoner_region"
            android:text="@string/single_summoner_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/single_summoner_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/single_summoner_level"
            android:layout_alignRight="@id/single_summoner_title"
            android:layout_below="@+id/single_summoner_title"
            android:layout_toEndOf="@+id/single_summoner_win_value"
            android:layout_toRightOf="@+id/single_summoner_win_value"
            android:text="@string/single_summoner_region"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/single_summoner_win_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/single_summoner_level"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/single_summoner_win_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/single_summoner_win_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/single_summoner_win_title"
            android:layout_below="@+id/single_summoner_level"
            android:layout_toEndOf="@+id/single_summoner_win_title"
            android:layout_toRightOf="@+id/single_summoner_win_title"
            android:padding="5dp"
            android:text="@string/single_summoner_win_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/single_summoner_losses_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/single_summoner_win_title"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/single_summoner_losses_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/single_summoner_losses_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/single_summoner_win_value"
            android:layout_toEndOf="@+id/single_summoner_losses_title"
            android:layout_toRightOf="@+id/single_summoner_losses_title"
            android:padding="5dp"
            android:text="@string/single_summoner_losses_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

            <ImageView
                    android:id="@+id/single_summoner_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:background="#000"
                    android:maxWidth="64dp"
                android:src="@drawable/profile_icon" />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:id="@+id/single_summoner_division_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/topSection"
        android:background="#555555"
        android:padding="15dp">

        <TextView
            android:id="@+id/single_summoner_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/single_summoner_division"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <ListView
        android:id="@+id/single_summoner_stat_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/single_summoner_division_points"
        android:scrollbarAlwaysDrawVerticalTrack="true" />

</RelativeLayout>
