<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context="com.example.jake.LeagueStats.InGameSingleSummonerActivity">
    <TableLayout
        android:id="@+id/topSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1">
        <TableRow>
            <RelativeLayout
                android:id="@+id/in_game_topSection_Sum_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/in_game_single_summoner_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:minWidth="100dp"
                    android:paddingRight="15dp"
                    android:text="@string/single_summoner_summoner_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/in_game_single_summoner_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/in_game_single_summoner_title"
                    android:text="@string/single_summoner_level"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:id="@+id/in_game_single_summoner_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/in_game_single_summoner_level"
                    android:text="@string/single_summoner_region"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <TextView
                    android:id="@+id/in_game_single_summoner_win_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/in_game_single_summoner_region"
                    android:paddingBottom="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/single_summoner_win_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/in_game_single_summoner_win_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/in_game_single_summoner_region"
                    android:layout_toEndOf="@+id/in_game_single_summoner_win_title"
                    android:layout_toRightOf="@+id/in_game_single_summoner_win_title"
                    android:padding="5dp"
                    android:text="@string/single_summoner_win_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/in_game_single_summoner_losses_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/in_game_single_summoner_win_value"
                    android:paddingBottom="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/single_summoner_losses_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/in_game_single_summoner_losses_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/in_game_single_summoner_win_value"
                    android:layout_toRightOf="@+id/in_game_single_summoner_losses_title"
                    android:padding="5dp"
                    android:text="@string/single_summoner_losses_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/in_game_single_summoner_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:background="#000"
                android:maxWidth="64dp"
                android:src="@drawable/profile_icon" />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:id="@+id/in_game_single_summoner_division_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/topSection"
        android:background="#555555"
        android:padding="15dp">

        <TextView
            android:id="@+id/in_game_single_summoner_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/single_summoner_division"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/in_game_single_summoner_league_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/single_summoner_league_points"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/in_game_single_summoner_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_game_single_summoner_division_points"
        android:layout_centerHorizontal="true"
        android:text="@string/in_game_single_summoner_item_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <ListView
        android:id="@+id/in_game_single_summoner_item_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/in_game_single_summoner_refresh_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/in_game_single_summoner_item_title" />

    <Button
        android:id="@+id/in_game_single_summoner_refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="refreshSummonerStats"
        android:padding="10dp"
        android:text="@string/in_game_single_summoner_refresh_button" />

</RelativeLayout>
